# public/swagger.json
@@ -127,6 +127,62 @@
 			"RegisterInstructorType": {
 				"$ref": "#/components/schemas/Omit_Instructor.otp-or-id-or-isVerified_"
 			},
+			"Question": {
+				"properties": {
+					"answerA": {
+						"type": "string"
+					},
+					"answerB": {
+						"type": "string"
+					},
+					"answerC": {
+						"type": "string"
+					},
+					"answerD": {
+						"type": "string"
+					},
+					"correctAnswer": {
+						"type": "string"
+					},
+					"question": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"answerA",
+					"answerB",
+					"answerC",
+					"answerD",
+					"question"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"Pick_Quiz.Exclude_keyofQuiz.instructorId-or-id-or-categoryId__": {
+				"properties": {
+					"description": {
+						"type": "string"
+					},
+					"questions": {
+						"items": {
+							"$ref": "#/components/schemas/Question"
+						},
+						"type": "array"
+					},
+					"title": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Quiz.instructorId-or-id-or-categoryId_": {
+				"$ref": "#/components/schemas/Pick_Quiz.Exclude_keyofQuiz.instructorId-or-id-or-categoryId__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"CreateQuizType": {
+				"$ref": "#/components/schemas/Omit_Quiz.instructorId-or-id-or-categoryId_"
+			},
 			"Health": {
 				"properties": {
 					"msg": {
@@ -710,7 +766,7 @@
 				}
 			}
 		},
-		"/api/auth/register/instructor": {
+		"/api/auth/register/host": {
 			"post": {
 				"operationId": "RegisterInstructor",
 				"responses": {
@@ -740,7 +796,7 @@
 				}
 			}
 		},
-		"/api/auth/verify/instructor-email": {
+		"/api/auth/verify/host-email": {
 			"post": {
 				"operationId": "VerifyInstructorEmail",
 				"responses": {
@@ -782,7 +838,7 @@
 				}
 			}
 		},
-		"/api/auth/resend/instructor-otp": {
+		"/api/auth/resend/host-otp": {
 			"post": {
 				"operationId": "ResendInstructorOTP",
 				"responses": {
@@ -820,7 +876,7 @@
 				}
 			}
 		},
-		"/api/auth/login/instructor": {
+		"/api/auth/login/host": {
 			"post": {
 				"operationId": "LoginInstructor",
 				"responses": {
@@ -862,7 +918,7 @@
 				}
 			}
 		},
-		"/api/auth/forgot/instructor-password": {
+		"/api/auth/forgot/host-password": {
 			"post": {
 				"operationId": "ForgotInstructorPassword",
 				"responses": {
@@ -900,7 +956,7 @@
 				}
 			}
 		},
-		"/api/auth/reset/instructor-password": {
+		"/api/auth/reset/host-password": {
 			"post": {
 				"operationId": "ResetInstructorPassword",
 				"responses": {
@@ -942,7 +998,7 @@
 				}
 			}
 		},
-		"/api/auth/update/instructor-password": {
+		"/api/auth/update/host-password": {
 			"post": {
 				"operationId": "UpdateInstructorPassword",
 				"responses": {
@@ -986,6 +1042,142 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/quiz/create/quiz": {
+			"post": {
+				"operationId": "CreateQuiz",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Quiz Creation controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateQuizType"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/quiz/get/collection": {
+			"get": {
+				"operationId": "GetAllRecords",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Quiz Creation controller Options"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "collectionName",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/quiz/get/record": {
+			"get": {
+				"operationId": "GetRecord",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Quiz Creation controller Options"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "collectionName",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "documentId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/quiz/delete/record": {
+			"delete": {
+				"operationId": "DeleteRecord",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Quiz Creation controller Options"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "collectionName",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "documentId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/health": {
