# src/types/index.ts
@@ -1,10 +1,13 @@
 
 import { Health } from "./health";
-import { Participant } from "./partcipant";
+import { Participant } from "./participant";
 import { Instructor } from "./instructor";
 import { Category } from "./category";
 import { Admin } from "./admin";
 import { User } from "./user";
+import { Question } from "./question";
+import { Answers } from "./answers";
+import { Quiz } from "./quiz"
+import { Result } from "./result";
 
-
-export { Health,Participant,User,Instructor,Category,Admin };
+export { Health,Question,Quiz,Answers,Result,Participant,User,Instructor,Category,Admin };
